# barracuda

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  build.bat  compile_commands.json  josidebar.cpp  josidebar.h  josidebar.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manual.org  ui_josidebar.h
architecture/: barracuda_blueprints.xmi
emacs/: .emacs  myinit.el  myinit.org
emacs/wolverine/: main.py
